# algebra_run

./: CMakeLists.txt
assets/shaders/: clip.frag
data/: main.json  splash.json
include/: game.hpp  states.hpp
include/states/: game.hpp  loading.hpp  menu.hpp
include/util/: asset.hpp  audio.hpp  button.hpp  error.hpp  event.hpp  text.hpp
src/: game.cpp  main.cpp
src/states/: game.cpp  loading.cpp  menu.cpp
src/util/: asset.cpp  audio.cpp  button.cpp  event.cpp  text.cpp
